<resources>
    <string name="app_name">PayBill</string>

    <string name="action_settings">Settings</string>
    <string name="app_title">PAYBILL</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_btn">Login</string>
    <string name="login_link"><u>Login</u></string>
    <string name="register_link"><u>Register</u></string>
    <string name="signup_btn">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
</resources>
