<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <RelativeLayout
        android:id="@+id/signup_rel_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/signup_tv"
            android:text="@string/app_title"
            android:textSize="50dp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="80dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:layout_below="@id/signup_tv"
            android:id="@+id/signup_email_et"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:layout_width="fill_parent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_edittext"
            android:gravity="center"
            android:layout_weight="0.75"
            android:hint="@string/email"
            android:textAlignment="center"
            android:layout_centerInParent="true"
            android:singleLine="true"
            />

        <EditText
            android:layout_below="@id/signup_email_et"
            android:id="@+id/signup_pw_tv"
            android:inputType="textPassword"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:layout_width="fill_parent"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_edittext"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_weight="0.75"
            android:hint="@string/password"
            android:layout_centerInParent="true"
            android:singleLine="true"
            />
        <EditText
            android:layout_below="@id/signup_pw_tv"
            android:id="@+id/signup_pw_tv2"
            android:inputType="textPassword"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:layout_width="fill_parent"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_edittext"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_weight="0.75"
            android:hint="@string/confirm_password"
            android:layout_centerInParent="true"
            android:singleLine="true"
            />

        <Button
            android:id="@+id/signup_signup_btn"
            android:layout_below="@id/signup_pw_tv2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_width="fill_parent"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:layout_height="50dp"
            android:textColor="#FFFFFF"
            android:background="@drawable/rounded_button_selector"
            android:text="@string/signup_btn"/>

        <TextView
            android:id="@+id/signup_login_btn"
            android:layout_below="@id/signup_signup_btn"
            android:layout_marginTop="30dp"
            android:textSize="32dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_link"
            android:textColor="#FFFFFF"/>



    </RelativeLayout>

</LinearLayout>